--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <title>Excursion</title>
   </head>
   <body>
+    
     <h1>Discover hidden places in the world around you</h1>
-
+    <a href="">Download Excursion (Coming soon!)</a>
     <h2>Your personal travel guide</h2>
+    <img src="resources/images/"/>
+    src="resources/images/brushes.jpeg" alt="picture of brushes"
+
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
+    <img src="resources/images/" />
+    <img src="resources/images/" />
+
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="">Download Excursion (Coming soon!)</a>
+    <p>Excursion</p>
 
   </body>
 </html>
