added code that link css and html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
   <body>
-    
+
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)</a>
     <h2>Your personal travel guide</h2>
     <img src="resources/images/"/>
-    src="resources/images/brushes.jpeg" alt="picture of brushes"
+    src="resources/images/brushes.jpeg" alt="picture of smartphone"
 
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
     <img src="resources/images/" />
