--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)</a>
     <h2>Your personal travel guide</h2>
-    <img src="resources/images/"/>
+    <img src="resources/images/excursion.mp4"/>
     src="resources/images/brushes.jpeg" alt="picture of smartphone"
 
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
-    <img src="resources/images/" />
-    <img src="resources/images/" />
+    <img src="resources/images/camp.jpg"/>
+    <img src="resources/images/excursion.png"/>
 
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="">Download Excursion (Coming soon!)</a>
-    <p>Excursion</p>
+    <p><span class="signature">Excursion</span></p>
 
   </body>
 </html>
