--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
   </head>
   <body>
 
+    <!--Topic  1-->
+    <h1>Discover hidden places in the world around you</h1>
+    <a href=>Download Excursion (Coming soon!)</a>
+    <!--Topic  2-->
     <h2>Your personal travel guide</h2>
-    src="resources/images/brushes.jpeg" alt="picture of smartphone"
-
-    <img src="resources/images/camp.jpg"/>
-    <img src="resources/images/excursion.png"/>
-
+      <video src="resources/images/excursion.mp4" alt="video" controls autoplay/>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
+      <img src="resources/images/camp.jpg"/>
+    <!--Topic 3-->
     <h2>Coming Soon for iPhone and Android</h2>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <p><span class="signature">Excursion</span></p>
+
+</body>
+</html>
     </body>
 </html>
