--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   </head>
   <body>
 
-    <!--Topic  1-->
+    <!--Topic  1 Er is nog geen echte downloadlink dus het is een nep one-->
     <h1>Discover hidden places in the world around you</h1>
-    <a href=>Download Excursion (Coming soon!)</a>
+    <a href="">Download Excursion (Coming soon!)1</a>
+    <video src="resources/images/excursion.mp4" alt="video" controls autoplay />
+
     <!--Topic  2-->
     <h2>Your personal travel guide</h2>
-      <video src="resources/images/excursion.mp4" alt="video" controls autoplay/>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
-      <img src="resources/images/camp.jpg"/>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
+    <img src="resources/images/camp.jpg"/>
+
     <!--Topic 3-->
     <h2>Coming Soon for iPhone and Android</h2>
-    <a href="">Download Excursion (Coming soon!)</a>
+    <img src="resources/images/phone.jpg"/>
+    <a href="">Download Excursion (Coming soon!)2</a>
     <p><span class="signature">Excursion</span></p>
 
 </body>
-</html>
-    </body>
 </html>
