--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
     <title>Excursion</title>
   </head>
   <body>
-
     <!--Topic  1 Er is nog geen echte downloadlink dus het is een nep one-->
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)1</a>
-    <video src="resources/images/excursion.mp4" alt="video" controls autoplay />
+    <p><video src="resources/images/excursion.mp4" alt="video" controls autoplay /></video></p>
 
     <!--Topic  2-->
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p.
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="resources/images/camp.jpg"/>
 
     <!--Topic 3-->
     <h2>Coming Soon for iPhone and Android</h2>
-    <img src="resources/images/phone.jpg"/>
+    <p><img src="resources/images/phone.png"/></p>
     <a href="">Download Excursion (Coming soon!)2</a>
-    <p><span class="signature">Excursion</span></p>
-
+    <p class="signature">&copy; Excursion </p>
 </body>
 </html>
